--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--navbar-->
-    <header>
+    <header class="container">
         <nav class="categories">
             <a href="https://google.com">Donna</a>
             <a href="https://google.com">Uomo</a>
@@ -24,5 +24,36 @@
             <a href="https://google.com">&#128717;</a>
         </div>
     </header>
+
+    <!--Card container-->
+    <div class="card-container container">
+        <div class="card-frame">
+            <div class="card card1"></div>
+            <div class="card-text">
+                <p class="brand">LEVI'S</p>
+                <p class="product-name">RELAXED FIT TEE UNISEX</p>
+                <div class="prices">
+                    <p class="current-price"><strong>14,99€</strong></p>
+                    <p class="old-price"><s>29,99€</s></p>
+                </div>
+            </div>
+        </div>
+        <div class="card-frame">
+            <div class="card card2"></div>
+        </div>
+        <div class="card-frame">
+            <div class="card card3"></div>
+        </div>
+        <div class="card-frame">
+            <div class="card card4"></div>
+        </div>
+        <div class="card-frame">
+            <div class="card card5"></div>
+        </div>
+        <div class="card-frame">
+            <div class="card card6"></div>
+        </div>
+        
+    </div>
 </body>
 </html>
