--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!--navbar-->
+    <div class="header-container">
     <header class="container">
         <nav class="categories">
             <a href="https://google.com">Donna</a>
@@ -16,7 +17,7 @@
             <a href="https://google.com">Bambino</a>
         </nav>
         <div class="header-logo">
-            <img href="img/boolean-logo.png">
+            <!--<img href="img/boolean-logo.png">-->
         </div>
         <div class="header-icons">
             <a href="https://google.com">&#128100;</a>
@@ -24,6 +25,7 @@
             <a href="https://google.com">&#128717;</a>
         </div>
     </header>
+</div>
 
     <!--Card container-->
     <div class="card-container container">
@@ -31,7 +33,7 @@
             <div class="card card1"></div>
             <div class="card-text">
                 <p class="brand">LEVI'S</p>
-                <p class="product-name">RELAXED FIT TEE UNISEX</p>
+                <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
                 <div class="prices">
                     <p class="current-price"><strong>14,99€</strong></p>
                     <p class="old-price"><s>29,99€</s></p>
@@ -40,12 +42,36 @@
         </div>
         <div class="card-frame">
             <div class="card card2"></div>
+            <div class="card-text">
+                <p class="brand">LEVI'S</p>
+                <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
+                <div class="prices">
+                    <p class="current-price"><strong>14,99€</strong></p>
+                    <p class="old-price"><s>29,99€</s></p>
+                </div>
+            </div>
         </div>
         <div class="card-frame">
             <div class="card card3"></div>
+            <div class="card-text">
+                <p class="brand">LEVI'S</p>
+                <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
+                <div class="prices">
+                    <p class="current-price"><strong>14,99€</strong></p>
+                    <p class="old-price"><s>29,99€</s></p>
+                </div>
+            </div>
         </div>
         <div class="card-frame">
             <div class="card card4"></div>
+            <div class="card-text">
+                <p class="brand">LEVI'S</p>
+                <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
+                <div class="prices">
+                    <p class="current-price"><strong>14,99€</strong></p>
+                    <p class="old-price"><s>29,99€</s></p>
+                </div>
+            </div>
         </div>
         <div class="card-frame">
             <div class="card card5"></div>
