--- a/index.html
+++ b/index.html
@@ -75,11 +75,47 @@
         </div>
         <div class="card-frame">
             <div class="card card5"></div>
+            <div class="card-text">
+                <p class="brand">LEVI'S</p>
+                <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
+                <div class="prices">
+                    <p class="current-price"><strong>14,99€</strong></p>
+                    <p class="old-price"><s>29,99€</s></p>
+                </div>
+            </div>
         </div>
         <div class="card-frame">
             <div class="card card6"></div>
+            <div class="card-text">
+                <p class="brand">LEVI'S</p>
+                <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
+                <div class="prices">
+                    <p class="current-price"><strong>14,99€</strong></p>
+                    <p class="old-price"><s>29,99€</s></p>
+                </div>
+            </div>
         </div>
-        
     </div>
+
+    <footer>
+        <div class="info-legali">
+            <h1 class="company-name">Boolando s.r.l.</h1>
+            <div class="legal-links">
+                <p>Informazioni legali &emsp;</p>
+                <p>Informazioni sulla privacy &emsp;</p>
+                <p>Diritto di recesso &emsp;</p>
+            </div>
+        </div>
+        <div class="info-social">
+            <h1 class="trovaci-anche-su">Trovaci anche su:</h1>
+            <div class="lista-icone-social">
+                <div class="icon"><a class="instagram" href="https://instagram.com">&hearts; &nbsp;</a></div>
+                <div class="icon"><a class="instagram" href="https://instagram.com">&hearts; &nbsp;</a></div>
+                <div class="icon"><a class="instagram" href="https://instagram.com">&hearts; &nbsp;</a></div>
+                <div class="icon"><a class="instagram" href="https://instagram.com">&hearts; &nbsp;</a></div>
+                <div class="icon"><a class="instagram" href="https://instagram.com">&hearts;</a></div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
