--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     <!--Card container-->
     <div class="card-container container">
         <div class="card-frame">
-            <div class="card card1"></div>
+            <div class="card card1">
+                <div class="hearth">&hearts;</div>
+                <div class="discount-tag">-50%</div>
+                <div class="sustainability-tag">Sostenibilità</div>
+            </div>
             <div class="card-text">
                 <p class="brand">LEVI'S</p>
                 <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
@@ -41,7 +45,10 @@
             </div>
         </div>
         <div class="card-frame">
-            <div class="card card2"></div>
+            <div class="card card2">
+                <div class="hearth">&hearts;</div>
+                <div class="discount-tag">-30%</div>
+            </div>
             <div class="card-text">
                 <p class="brand">LEVI'S</p>
                 <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
@@ -52,7 +59,10 @@
             </div>
         </div>
         <div class="card-frame">
-            <div class="card card3"></div>
+            <div class="card card3">
+                <div class="hearth">&hearts;</div>
+                <div class="discount-tag">-30%</div>
+            </div>
             <div class="card-text">
                 <p class="brand">LEVI'S</p>
                 <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
@@ -63,7 +73,11 @@
             </div>
         </div>
         <div class="card-frame">
-            <div class="card card4"></div>
+            <div class="card card4">
+                <div class="discount-tag">-50%</div>
+                <div class="hearth">&hearts;</div>
+                <div class="sustainability-tag">Sostenibilità</div>
+            </div>
             <div class="card-text">
                 <p class="brand">LEVI'S</p>
                 <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
@@ -74,7 +88,9 @@
             </div>
         </div>
         <div class="card-frame">
-            <div class="card card5"></div>
+            <div class="card card5">
+                <div class="hearth">&hearts;</div>
+            </div>
             <div class="card-text">
                 <p class="brand">LEVI'S</p>
                 <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
@@ -85,7 +101,10 @@
             </div>
         </div>
         <div class="card-frame">
-            <div class="card card6"></div>
+            <div class="card card6">
+                <div class="hearth">&hearts;</div>
+                <div class="sustainability-tag">Sostenibilità</div>
+            </div>
             <div class="card-text">
                 <p class="brand">LEVI'S</p>
                 <p class="product-name"><strong>RELAXED FIT TEE UNISEX</strong></p>
