added fixed position for header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!--navbar-->
+    <div class="header-super-container">
     <div class="header-container">
     <header class="container">
         <nav class="categories">
@@ -25,7 +26,8 @@
             <a href="https://google.com">&#128717;</a>
         </div>
     </header>
-</div>
+    </div>
+    </div>
 
     <!--Card container-->
     <div class="card-container container">
